# SGLinTx

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  Cross.toml  Dockerfile.riscv64  README.md  TODO.md  USB_GAMEPAD_GUIDE.md  USB_GAMEPAD_SUMMARY.md  add_hid_to_g0.sh  build.rs  gamepad_composite.sh  init_hid_gamepad.sh  joystick.toml  joystick_correct.toml  justfile  mock_config.toml  radio.toml  setup_hid_gamepad.sh  test_usb_gamepad.sh  tmp_todo.md  update_hid_descriptor.sh
.cargo/: config.toml
docs/: EDGETX_PARITY_CHECKLIST.md  KNOWN_ISSUES.md  TODO_ELRS_UI_GOALS.md  UI_FBDEV_PERF_NOTES.md  elrs_debug_status.md  lintx-manual.typ
docs/validation/: README.md  TEMPLATE.md  UNIT_A_INPUT_SYSTEM.md  UNIT_A_INPUT_SYSTEM_COMPARE.md  VO_BACKEND_WIP_STATUS.md
examples/: elrs_magic.lua
models/: fixed_wing.toml  quad_x.toml  rover.toml
scripts/board/: board_common.sh  deploy_to_board.sh  stop_lintx.sh  test_elrs_ui_config.sh  test_gui_crsf.sh  test_gui_crsf_debug.sh  test_gui_mock.sh  test_gui_mock_touch_debug.sh  test_input_elrs_return.sh  test_input_mock.sh  test_input_stm32.sh  test_ui_terminal_keys.sh  ui_key_input.sh
src/: adc.rs  calibrate.rs  crsf_rc_in.rs  elrs_agent.rs  elrs_tx.rs  gampad.rs  joy_dev.rs  joysticks_test.rs  lua_run.rs  main.rs  messages.rs  mixer.rs  mock_joystick.rs  stm32_serial.rs  system_state_mock.rs  ui_demo.rs  ui_emit_input.rs  ui_input_fifo.rs  ui_key_input.rs  usb_gamepad.rs
src/config/: mod.rs  store.rs
src/elrs/: mod.rs
src/ui/: app.rs  backend.rs  catalog.rs  feedback.rs  input.rs  mod.rs  model.rs
src/ui/apps/: about.rs  cloud.rs  common.rs  control.rs  mod.rs  models.rs  scripts.rs  sensor.rs  system.rs  trainer.rs
src/ui/backend/: fbdev.rs  lvgl_core.rs  mod.rs  pointer.rs  sdl.rs  terminal.rs  vo.rs  vo_shim.c
