[package]
name = "LinTx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rpos = { path = "./rpos" }
nb = "1"
clap = { version = "4.4.18", features = ["derive"] }
toml = "0.8.10"
serde ={ version = "1.0.197", features = ["derive"] }
serialport = {version = "4.3.0",default-features = false}
crc = "3.0"
crsf = "2.0.1"
mlua = { version = "0.10.3", features = ["lua54", "vendored"], optional = true }
lvgl = { version = "0.6.2", default-features = false, features = ["alloc", "embedded_graphics", "use-vendored-config"], optional = true }
lvgl-sys = { version = "0.6.2", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
ads1x1x = { git = "https://github.com/eldruin/ads1x1x-rs.git" }
embedded-hal = "1.0.0"
linux-embedded-hal = "0.4.0"
joydev = { version = "0.3.1", optional = true }
libc = "0.2"

[features]
default = []
joydev_input = ["dep:joydev"]
lvgl_ui = ["dep:lvgl", "dep:lvgl-sys"]
sdl_ui = ["lvgl_ui", "dep:sdl2"]
used_linker = []
lua = ["dep:mlua"]

[target.'cfg(any(target_os = "linux", target_os = "windows"))'.dependencies]
sdl2 = { version = "0.37.0", features = ["bundled"], optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
sdl2 = { version = "0.37.0", optional = true }

[dev-dependencies]
rand = "0.8.4"

[build-dependencies]
build-data = "0"
cc = "1.1"
pkg-config = "0.3"

[patch.crates-io]
joydev = { path = "third_party/joydev" }
joydev-sys = { path = "third_party/joydev-sys" }
lvgl-sys = { path = "third_party/lvgl-sys" }
lvgl = { path = "third_party/lvgl" }
